examples/test/testpolicy4299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4299
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key40: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value15
          key2: value6
      podSelector:
        matchLabels:
          key40: value29
          key48: value36
